--- a/node/email-send/register.html
+++ b/node/email-send/register.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<form action="/register1" method="POST" enctype="text/plain" name="registerform">
+	 <form action="/register1" method="POST" enctype="text/plain" name="registerform">   <!--text/pian 纯文本 -->
 		<!--  enctype 编码类型 -->
 		<input type="email" placeholder="输入你的邮箱" name="email">
 		<input type="text" placeholder="输入验证码" name="code">
