--- a/vue-learn/vue-transition/index.html
+++ b/vue-learn/vue-transition/index.html
@@ -70,10 +70,14 @@
             background-color: #2c3e50;
             opacity: 0.6;
         }
+
+         /*入场(离场)动画的时间段   */
         .fade-enter-active,
         .fade-leave-active{
             transition: opacity .4s linear;;
         }
+        /*v-enter 是进入之前，元素的起始状态*/
+        /*v-leave-to 离开之后动画的终止状态*/
         .fade-enter,
         .fade-leave-to{
             opacity: 0;
