--- a/js/js-prototype-chain/3.html
+++ b/js/js-prototype-chain/3.html
@@ -24,10 +24,10 @@
         var obj2 = Object.create(null)
         // obj2.name = 'wn'
 
-        obj2.__proto__ = {
-            name: 'wn'
-        }
-        obj2.name
+        // obj2.__proto__ = {
+        //     name: 'wn'
+        // }
+        // obj2.name
 
         var obj3 = Object.create(obj2)
         
