--- a/js/js-面试/跨域/fe/index.html
+++ b/js/js-面试/跨域/fe/index.html
@@ -17,6 +17,25 @@
             console.log('接受道后端返回的数据:', data);
         }
     </script>
-    <script src="http://127.0.0.1:8088/api"></script>
+    <!-- <script src="http://127.0.0.1:8088/api"></script> -->
+    <script>
+        function jsonp (url) {
+            return new Promise((resolve, reject) => {
+                let methodName = `jsonpCallback${Date.now()}`
+                window[methodName] = function(data) {
+                    resolve(data)
+                }
+                const scriptNode = document.createElement('script')
+                scriptNode.src = url + '?callback=' + methodName
+                document.body.appendChild(scriptNode)
+                setTimeout(() => {
+                    reject()
+                }, 5000)
+            })
+        }
+        jsonp({ url: "http://127.0.0.1:8088/api"}).then(res => {
+            console.log('结果:', res);
+        })
+    </script>
 </body>
 </html>
