--- a/js/js-面试/面试题/算法/getElementBYId.html
+++ b/js/js-面试/面试题/算法/getElementBYId.html
@@ -11,9 +11,9 @@
         function walk(node) {
             if (node.nodeType === 1) {
                 //这里我们用nodeName属性，直接获取节点的节点名称
-                //if (node.getAttrubute('id') === id) {
-                    console.log(node.getAttrubute('id'))
-                //}
+                if (node.getAttribute('id') === id) {
+                    console.log(node)
+                }
             }
             //获取该元素节点的所有子节点
             var children = node.childNodes;
@@ -22,6 +22,7 @@
                 walk(children[i])
             }
         }
+        walk(node)
     }
     getbyid('app')
 </script>
