--- a/js/js-面试/快手/数组拍平.html
+++ b/js/js-面试/快手/数组拍平.html
@@ -31,4 +31,12 @@
         }
         return res
     }
+
+</script>
+<script>
+    function flatten(arr) {
+        return arr.reduce(function (acc, val) {
+            return acc.concat(Array.isArray(val) ? flatten(val) : val)
+        }, [])
+    }
 </script>
