--- a/js/js-面试/跨域/fe-jsonp/index.html
+++ b/js/js-面试/跨域/fe-jsonp/index.html
@@ -22,6 +22,7 @@
         function jsonp (url) {
             return new Promise((resolve, reject) => {
                 let methodName = `jsonpCallback${Date.now()}`
+                console.log(methodName)
                 window[methodName] = function(data) {
                     resolve(data)
                 }
