--- a/js/js-面试/字节/duilei.html
+++ b/js/js-面试/字节/duilei.html
@@ -24,8 +24,8 @@ new Queue()
             return this
         }
         start() {
-            t = 0
-            for(let task of this.tasks) {
+            let t = 0
+            for(let task of this.tasks) { 
                 t += task.time
                 setTimeout(() => {
                     task.cb()
