--- a/js/js-面试/百度/快排1.html
+++ b/js/js-面试/百度/快排1.html
@@ -18,3 +18,40 @@
     }
     console.log(quickSort([1,3,5,84,3,47,27,49,35]))
 </script>
+
+<script>
+    var sortArray = function(nums) {
+    return mergeSort(nums, 0, nums.length - 1)
+};
+
+function mergeSort(nums, left, right) {
+    if (left >= right) return nums;
+    let mid = (left + right) >> 1;
+    mergeSort(nums, left, mid)
+    mergeSort(nums, mid + 1, right)
+    return merge(nums, left, mid, right)
+}
+
+function merge(nums, left, mid, right) {
+    let ans = [];
+    let c = 0, i = left, j = mid + 1;
+    while (i <= mid && j <= right) {
+        if (nums[i] < nums[j]) {
+            ans[c++] = nums[i++];
+        } else {
+            ans[c++] = nums[j++]
+        }
+    }
+    while (i <= mid) {
+        ans[c++] = nums[i++];
+    }
+    while (j <= right) {
+        ans[c++] = nums[j++];
+    }
+    for (let i = 0; i < ans.length; i++) {
+        nums[i + left] = ans[i];
+    }
+    return nums;
+}
+
+</script>
